# cpp-labs

./: CMakeLists.txt  dup01.c  dup02.c  getwwwpage.c  kill1.cpp  kinsfolk-child2.cpp  kinsfolk-parent1.cpp  mmap1.c  mmap2-owner.c  mmap2-user.c  pipe1-parent.c  pipe1-src.c  shm1-owner.cpp  shm1-user.cpp  shm2-owner.cpp  socket1.c  socket2-server.c  socket3-client.c  socket3-server.c
lab6/: CMakeLists.txt  fifo2-client.c  fifo2-server.c  kill2.cpp  kinsfolk-child1.cpp  kinsfolk-parent2.cpp  mkfifo1.c  pipe1-dst.c  pipe2.c  shm2-user.cpp  sigaction1.cpp  sigaction2.cpp  socket2-client.c
