cmake_minimum_required(VERSION 3.12)
project(Lab6)

set(CMAKE_CXX_STANDARD 14)

add_executable(kinsfolk-child1 kinsfolk-child1.cpp)
add_executable(kinsfolk-parent1 kinsfolk-parent1.cpp)
add_executable(kill1 kill1.cpp)
add_executable(kill2 kill2.cpp)
add_executable(sigaction1 sigaction1.cpp)
add_executable(sigaction2 sigaction2.cpp)
add_executable(kinsfolk-child2 kinsfolk-child2.cpp)
add_executable(kinsfolk-parent2 kinsfolk-parent2.cpp)
add_executable(shm1-owner shm1-owner.cpp)
add_executable(shm1-user shm1-user.cpp)
add_executable(shm2-owner shm2-owner.cpp)
add_executable(shm2-user shm2-user.cpp)
add_executable(mmap1 mmap1.c)
add_executable(mmap2-owner mmap2-owner.c)
add_executable(mmap2-user mmap2-user.c)
add_executable(pipe1-parent pipe1-parent.c)
add_executable(pipe1-src pipe1-src.c)
add_executable(pipe1-dst pipe1-dst.c)
add_executable(dup01 dup01.c)
add_executable(dup02 dup02.c)
add_executable(pipe2 pipe2.c)
add_executable(mkfifo1 mkfifo1.c)
add_executable(fifo2-server fifo2-server.c)
add_executable(fifo2-client fifo2-client.c)
add_executable(socket1 socket1.c)
add_executable(getwwwpage getwwwpage.c)
add_executable(socket2-server socket2-server.c)
add_executable(socket2-client socket2-client.c)
add_executable(socket3-server socket3-server.c)
add_executable(socket3-client socket3-client.c)